--- a/front/src/Components/Genres/Style/Genre.module.css
+++ b/front/src/Components/Genres/Style/Genre.module.css
@@ -1,33 +1,45 @@
 .genre_box {
-    background-color: black;
-    color: white;
-    border: 2px solid #00ff00; /* Green border */
-    border-radius: 10px; /* Adjust the radius to your liking for rounded corners */
-    padding: 10px;
-    margin: 10px;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-    max-width: 20vw;
-    max-height:40vh;
-  }
-  
-  .genre_box:hover {
-    background-color: #00ff00; /* Green background on hover */
-  }
-  
-  .selected_genre {
-    background-color: #00ff00; /* Green background for the selected genre */
-    color: black; /* Adjust the text color for better visibility */
-  }
-  
-  .genreContainer {
-    text-align: center;
-    margin: 10px;
-  }
-  
-  .genreImage {
-    width: 10vw; 
-    height: 20vh;
-    border-radius: 50%; /* Make the image round */
-  }
-  
+  position: relative;
+  background-color: black;
+  color: white;
+  border: 2px solid #00ff00;
+  border-radius: 10px;
+  padding: 10px;
+  margin: 10px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+  max-width: 20vw;
+  max-height: 40vh;
+  overflow: hidden;
+}
+
+.genre_box:hover {
+  background-color: #00ff00;
+}
+
+.selected_genre {
+  background-color: #00ff00;
+  color: black;
+}
+
+.genreContainer {
+  text-align: center;
+  margin: 10px;
+}
+
+.genreImage {
+  width: 10vw;
+  height: 20vh;
+}
+
+.floatingTitle {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  color: white;
+  padding: 10px;
+}
+
