--- a/front/src/Components/Genres/Style/GenreContainer.module.css
+++ b/front/src/Components/Genres/Style/GenreContainer.module.css
@@ -30,6 +30,13 @@ button:hover {
   width: 60%;
 }
 
+.genreContainerContainer{
+  display:flex;
+  flex-direction:column;
+  justify-content: center;
+  align-items: center;
+}
+
 .closeButton {
   position: absolute;
   top: 0;
@@ -44,8 +51,8 @@ button:hover {
 }
 
 .loadMore {
-  max-width: fit-content;
-  max-height: fit-content;
+  width: fit-content;
+  height: fit-content;
   background-color: black;
   color: white;
   border: 2px solid #00ff00; /* Green border */
